# fastapi-base

./: .gitignore  README.md  pyproject.toml
tests/: test_app.py
