[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Jorge Luiz <jre-jl@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<4.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
