[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Jorge Luiz <jre-jl@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<4.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.11"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fastapi_base/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_base -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
